src/runtime/tests/data/negative/asserts/self.hsh
let obj = @[
	test: function (arg)
		self
	end,
]

std.assert(obj.test(1) == 1)
